# bidd

./: Cargo.toml  README.md
resources/: bidd.plist
src/: bluetooth.rs  blueutil.rs  main.rs  tests.rs
