[package]
name = "bluetooth-daemon"
version = "0.1.0"
edition = "2021"

[dependencies]
btleplug = "0.11.5"
color-eyre = { version = "0.6.3", default-features = false }
futures-util = "0.3.30"
tokio = { version = "1.37.0", features = ["rt", "macros"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", default-features = false, features = ["env-filter", "fmt", "ansi"] }
